<resources>
    <string name="app_name">FilmsApp</string>
    <string name="back">Back</string>
    <string name="pg_13_plus">13+</string>
    <string name="film_name">Avengers:\nEnd Game</string>
    <string name="genre">Action, Adventure, Fantasy</string>
    <string name="reviews">125 reviews</string>
    <string name="storyline_header">Storyline</string>
    <string name="storyline_text">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos\' actions and restore balance to the universe.</string>
    <string name="cast">Cast</string>
    <string name="actorName1">Robert Downey Jr.</string>
    <string name="actorName2">Chris Evans</string>
    <string name="actorName3">Mark Ruffalo</string>
    <string name="actorName4">Chris Hemsworth</string>
</resources>