<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_color"
        tools:context=".MovieDetailsActivity">

        <ImageView
            android:id="@+id/image"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:foreground="@drawable/gradient"
            android:scaleType="centerCrop"
            android:src="@drawable/orig"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_18"
            android:layout_marginTop="@dimen/margin_56"
            android:drawablePadding="@dimen/margin_8"
            android:text="@string/back"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_size_12"
            app:drawableStartCompat="@drawable/ic_path"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/margin_16" />

        <TextView
            android:id="@+id/pgTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_154"
            android:text="@string/pg_13_plus"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_size_12"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/backBtn" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/gradient"
            app:layout_constraintBottom_toBottomOf="@id/image"
            app:layout_constraintEnd_toEndOf="@id/image"
            app:layout_constraintStart_toStartOf="@id/image"
            app:layout_constraintTop_toTopOf="@id/pgTextView" />

        <TextView
            android:id="@+id/filmNameTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/film_name"
            android:textColor="@color/film_name_color"
            android:textSize="@dimen/text_size_40"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/pgTextView" />


        <TextView
            android:id="@+id/genre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_4"
            android:text="@string/genre"
            android:textColor="@color/genre_color"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/filmNameTextView" />

        <RatingBar
            android:id="@+id/rating"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_6"
            android:numStars="5"
            android:progress="4"
            android:progressBackgroundTint="@color/unselected_rating_color"
            android:progressTint="@color/selected_rating_color"
            android:rating="4"
            android:stepSize="1"
            android:tint="@color/unselected_rating_color"
            app:layout_constraintEnd_toStartOf="@id/number_of_views"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@id/genre" />

        <TextView
            android:id="@+id/number_of_views"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_8"
            android:layout_marginTop="@dimen/margin_4"
            android:text="@string/reviews"
            android:textColor="@color/unselected_rating_color"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toEndOf="@id/rating"
            app:layout_constraintTop_toBottomOf="@id/genre" />

        <TextView
            android:id="@+id/storyline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_28"
            android:text="@string/storyline_header"
            android:textColor="@color/film_name_color"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/rating" />

        <TextView
            android:id="@+id/storyline_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/storyline_text"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_size_14"
            app:layout_constraintEnd_toStartOf="@id/guideline_end"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/storyline" />

        <TextView
            android:id="@+id/cast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/cast"
            android:textColor="@color/film_name_color"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/storyline_text" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrierToCast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:barrierMargin="@dimen/margin_7"
            app:constraint_referenced_ids="cast" />

        <ImageView
            android:id="@+id/image1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_8"
            android:adjustViewBounds="true"
            android:src="@drawable/img1"
            app:layout_constraintEnd_toStartOf="@id/image2"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/barrierToCast" />

        <ImageView
            android:id="@+id/image2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_8"
            android:adjustViewBounds="true"
            android:src="@drawable/img2"
            app:layout_constraintEnd_toStartOf="@id/image3"
            app:layout_constraintStart_toEndOf="@id/image1"
            app:layout_constraintTop_toBottomOf="@id/barrierToCast" />

        <ImageView
            android:id="@+id/image3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_8"
            android:adjustViewBounds="true"
            android:src="@drawable/img3"
            app:layout_constraintEnd_toStartOf="@id/image4"
            app:layout_constraintStart_toEndOf="@id/image2"
            app:layout_constraintTop_toBottomOf="@id/barrierToCast" />

        <ImageView
            android:id="@+id/image4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/img4"
            app:layout_constraintEnd_toStartOf="@id/guideline_end"
            app:layout_constraintStart_toEndOf="@id/image3"

            app:layout_constraintTop_toBottomOf="@id/barrierToCast" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrierToImages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:barrierMargin="@dimen/margin_6"
            app:constraint_referenced_ids="image1, image2, image3, image4" />

        <TextView
            android:id="@+id/actorName1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/actorName1"
            android:textColor="@color/actor_name_color"
            android:textSize="@dimen/text_size_12"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/image1"
            app:layout_constraintStart_toStartOf="@id/image1"
            app:layout_constraintTop_toBottomOf="@id/barrierToImages" />

        <TextView
            android:id="@+id/actorName2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/actorName2"
            android:textColor="@color/actor_name_color"
            android:textSize="@dimen/text_size_12"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/image2"
            app:layout_constraintStart_toStartOf="@id/image2"
            app:layout_constraintTop_toBottomOf="@id/barrierToImages" />

        <TextView
            android:id="@+id/actorName3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/actorName3"
            android:textColor="@color/actor_name_color"
            android:textSize="@dimen/text_size_12"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/image3"
            app:layout_constraintStart_toStartOf="@id/image3"
            app:layout_constraintTop_toBottomOf="@id/barrierToImages" />

        <TextView
            android:id="@+id/actorName4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/actorName3"
            android:textColor="@color/actor_name_color"
            android:textSize="@dimen/text_size_12"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/image4"
            app:layout_constraintStart_toStartOf="@id/image4"
            app:layout_constraintTop_toBottomOf="@id/barrierToImages" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/margin_16" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

